--- a/Source/ZEEngine/ZEParticle/CMakeLists.txt
+++ b/Source/ZEEngine/ZEParticle/CMakeLists.txt
@@ -70,7 +70,7 @@ ze_add_source(ZEParticleDisplacementOperator.h			Sources Headers ZEPP)
 ze_add_source(ZEParticleRandomAccelerationOperator.cpp	Sources)
 ze_add_source(ZEParticleRandomAccelerationOperator.h	Sources Headers ZEPP)
 
-ze_add_library(ZEParticle 
+ze_add_library(TARGET ZEParticle 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZEFoundation)
