--- a/Source/ZEEngine/ZETexture/CMakeLists.txt
+++ b/Source/ZEEngine/ZETexture/CMakeLists.txt
@@ -141,11 +141,11 @@ ze_add_source(ZEPixel.h									Sources Headers)
 ze_add_source(ZETextureTestUtils.cpp					Sources)
 ze_add_source(ZETextureTestUtils.h						Sources Headers)
 
-ze_add_library(ZETexture 
+ze_add_library(TARGET ZETexture 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZEFoundation libFreeImage ZEDirect3D9)
 
-ze_add_test(ZETextureTests 
+ze_add_test(TARGET ZETextureTests 
 	SOURCES ${Tests}
 	TEST_TARGET ZETexture)
