--- a/Source/ZEFoundation/ZECompression/CMakeLists.txt
+++ b/Source/ZEFoundation/ZECompression/CMakeLists.txt
@@ -52,7 +52,7 @@ ze_add_source(ZECompressorZLIB.cpp						Sources)
 ze_add_source(ZEDecompressorZLIB.h						Sources)
 ze_add_source(ZEDecompressorZLIB.cpp					Sources)
 
-ze_add_library(ZECompression
+ze_add_library(TARGET ZECompression
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
 	LIBS ZEFoundation libZLib)
