--- a/Source/ZEFoundation/ZERegEx/CMakeLists.txt
+++ b/Source/ZEFoundation/ZERegEx/CMakeLists.txt
@@ -40,7 +40,7 @@ add_subdirectory(TRE)
 ze_add_source(ZERegEx.h 			Sources Headers)
 ze_add_source(ZERegEx.cpp 			Sources)
 
-ze_add_library(ZERegEx 
+ze_add_library(TARGET ZERegEx 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
 	LIBS ZEFoundation TRE)
