--- a/Source/ZEModules/ZEDirect3D9/ZED3D9PostProcessor/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/ZED3D9PostProcessor/CMakeLists.txt
@@ -42,7 +42,7 @@ ze_add_source(ZED3D9PPBlurNode.h			Sources)
 ze_add_source(ZED3D9PPScreenOutputNode.cpp	Sources)
 ze_add_source(ZED3D9PPScreenOutputNode.h	Sources)
 
-ze_add_library(ZED3D9PostProcessor 
+ze_add_library(TARGET ZED3D9PostProcessor 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	LIBS ZEDirect3D9 libDirect3D9)
