--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUtils/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUtils/CMakeLists.txt
@@ -38,7 +38,7 @@ cmake_minimum_required (VERSION 2.8)
 ze_add_source(ZE3dsMaxUtils.h				Sources)
 ze_add_source(ZE3dsMaxUtils.cpp				Sources)
 
-ze_add_library(ZE3dsMaxUtils
+ze_add_library(TARGET ZE3dsMaxUtils
 	SOURCES ${Sources}
 	LIBS ZEFoundation lib3dsMax)
 
