--- a/Source/ZEEngine/ZEAI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAI/CMakeLists.txt
@@ -75,11 +75,11 @@ ze_add_source(ZENavigationMesh.cpp				Sources)
 ze_add_source(ZENavigationMeshGenerator.h		Sources Headers)
 ze_add_source(ZENavigationMeshGenerator.cpp		Sources)
 
-ze_add_library(ZEAI
+ze_add_library(TARGET ZEAI
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
 	LIBS ZEFoundation)
 	
-ze_add_test(ZEAITests 
+ze_add_test(TARGET ZEAITests 
 	SOURCES ${Tests}
 	TEST_TARGET ZEAI)
