--- a/Source/ZEFoundation/ZESerialPort/CMakeLists.txt
+++ b/Source/ZEFoundation/ZESerialPort/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZESerialPort.cpp				Sources)
 ze_add_source(ZESerialPort_Windows.cpp		Sources PLATFORMS Windows)
 ze_add_source(ZESerialPort_Unix.cpp			Sources PLATFORMS Unix)
 
-ze_add_library(ZESerialPort 
+ze_add_library(TARGET ZESerialPort 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
 	LIBS ZEFoundation)
