--- a/Source/ZEModules/CMakeLists.txt
+++ b/Source/ZEModules/CMakeLists.txt
@@ -55,11 +55,11 @@ ze_add_source(ZEModules.h			Sources Headers)
 ze_add_source(ZEModules.cpp			Sources)
 ze_add_source(CMakeLists.txt		Sources)
 
-ze_add_library(ZEModules 
+ze_add_library(TARGET ZEModules 
 	SOURCES ${Sources}
 	LIBS ${Modules})
 
-#ze_combine_libraries(ZEModules 
+#ze_combine_libraries(TARGET ZEModules 
 #	LIBS ZEDirect3D9
 #		 ZEWindowsInput
 #		 ZEVRPNInput
