--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxModelExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxModelExporter/CMakeLists.txt
@@ -54,7 +54,7 @@ qt4_add_resources(QtResourceFiles ${QtResources})
 qt4_wrap_ui(QtUIFiles ${QtUI})
 qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 
-ze_add_library(ZE3dsMaxModelExporter 
+ze_add_library(TARGET ZE3dsMaxModelExporter 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax QWinWidget)
 
