--- a/Source/ZETools/ZEToolComponents/ZEProgressDialog/CMakeLists.txt
+++ b/Source/ZETools/ZEToolComponents/ZEProgressDialog/CMakeLists.txt
@@ -49,6 +49,6 @@ qt4_add_resources(QtResourceFiles ${QtResources})
 qt4_wrap_ui(QtUIFiles ${QtUI})
 qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 
-ze_add_library(ZEProgressDialog 
+ze_add_library(TARGET ZEProgressDialog 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS libQt)
