--- a/Source/ZEditor/ZEDCommonControls/ZEDPropertyWindowManager/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCommonControls/ZEDPropertyWindowManager/CMakeLists.txt
@@ -74,6 +74,6 @@ qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
-ze_add_library(ZEDPropertyWindowManager 
+ze_add_library(TARGET ZEDPropertyWindowManager 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS libQt)
