--- a/Source/ZEditor/ZEDSceneEditor/CMakeLists.txt
+++ b/Source/ZEditor/ZEDSceneEditor/CMakeLists.txt
@@ -53,6 +53,6 @@ qt4_add_resources (QtResourceFiles ${QtResources})
 qt4_wrap_ui (QtUIFiles ${QtUI})
 qt4_wrap_cpp (QtMocFiles  ${QtMocs})
 
-ze_add_library(ZEDSceneEditor 
+ze_add_library(TARGET ZEDSceneEditor 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
 	LIBS libQt)
