FIX : ZESocket/ZEIPAddress_Windows.cpp minor bug fixed. CHG : ZEMLNode now supports both XML to ZEML and ZEML to XML conversions.
svn path=/trunk/; revision=1520

--- a/Source/ZEFoundation/ZEML/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEML/CMakeLists.txt
@@ -57,7 +57,7 @@ ze_add_source(ZEMLSerialReaderTests.cpp 	Tests)
 ze_add_library(TARGET ZEML 
 	SOURCES ${Sources} 
 	HEADERS ${Headers}
-	LIBS ZEFoundation)
+	LIBS ZEFoundation libTinyXML)
 
 ze_add_test(TARGET ZEMLTests
 	SOURCES ${Tests}
