ADD: Gökay Özaktürk's NewGraphics system cumulative commit.
svn path=/branches/v0.6.1-NewGraphics/; revision=1524

--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -1,5 +1,5 @@
 [Error]
-LogFileEnabled = false
+LogFileEnabled = true
 LogFileName = error.log
 
 [Graphics]
@@ -10,7 +10,7 @@ VerticalSync = false
 SampleCount = 1
 AnisotropicFilter = 16
 ShaderQuality = 3
-TextureQuality = 3
+TextureQuality = 5
 ModelQuality = 3
 PostEffectQuality = 3
 HDRQuality = 5
