--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -85,6 +85,8 @@ ze_add_source(ZERandomTests.cpp			Tests)
 ze_add_source(ZETimeCounter.h			Headers)
 ze_add_source(ZETimeCounter.cpp			Sources)
 ze_add_source(ZETimeCounterTests.cpp	Tests)
+ze_add_source(ZETimeStamp.h				Headers)
+ze_add_source(ZETimeStamp.cpp			Sources)
 ze_add_source(ZEBase64.h				Sources Headers)
 ze_add_source(ZEBase64.cpp				Sources)
 ze_add_source(ZEVersion.cpp				Sources)
