--- a/Source/ZEEngine/ZENetwork/CMakeLists.txt
+++ b/Source/ZEEngine/ZENetwork/CMakeLists.txt
@@ -35,53 +35,26 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-project(ZinekEngine)
+ze_add_source(ZENetworkModule.cpp				Sources)
+ze_add_source(ZENetworkModule.h					Sources Headers)
+ze_add_source(ZENetworkClient.cpp				Sources)
+ze_add_source(ZENetworkClient.h					Sources Headers)
+ze_add_source(ZENetworkConnection.cpp				Sources)
+ze_add_source(ZENetworkConnection.h	 			Sources Headers)
+ze_add_source(ZENetworkModule.cpp				Sources)
+ze_add_source(ZENetworkModule.h	 				Sources Headers)
+ze_add_source(ZENetworkObject.cpp				Sources)
+ze_add_source(ZENetworkObject.h	 				Sources Headers)
+ze_add_source(ZENetworkObjectStateLocal.cpp			Sources)
+ze_add_source(ZENetworkObjectStateLocal.h			Sources Headers)
+ze_add_source(ZENetworkObjectStateRemote.cpp			Sources)
+ze_add_source(ZENetworkObjectStateRemote.h	 		Sources Headers)
+ze_add_source(ZENetworkObjectMessageManager.cpp			Sources)
+ze_add_source(ZENetworkObjectMessageManager.h		 	Sources Headers)
+ze_add_source(ZENetworkServer.cpp				Sources)
+ze_add_source(ZENetworkServer.h	 				Sources Headers)
 
-ze_set_project_folder("ZEEngine")
-
-set (CMAKE_CXX_SOURCE_FILE_EXTENSIONS ${CMAKE_CXX_SOURCE_FILE_EXTENSIONS} zpp)
-
-ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS 
-	ZE_ZINEK_ENGINE)
-
-add_subdirectory(ZEAI)
-add_subdirectory(ZECore)
-add_subdirectory(ZEDebug)
-add_subdirectory(ZEGame)
-add_subdirectory(ZEGraphics)
-add_subdirectory(ZETexture)
-add_subdirectory(ZEInput)
-add_subdirectory(ZEInterior)
-add_subdirectory(ZEMeta)
-add_subdirectory(ZEModel)
-add_subdirectory(ZEParticle)
-add_subdirectory(ZEPhysics)
-add_subdirectory(ZEScript)
-add_subdirectory(ZESound)
-add_subdirectory(ZEUI)
-add_subdirectory(ZETerrain)
-add_subdirectory(ZENetwork)
-
-ze_add_source(ZEAPI.h 						Sources Headers)
-ze_add_source(ZECompileOptions.h 			Sources Headers)
-ze_add_source(ZEDefinitions.h 				Sources Headers)
-ze_add_source(ZESDK.h 						Sources Headers)
-ze_add_source(ZESDK.cpp 					Sources)
-
-
-ze_add_library(TARGET ZEEngine 
+ze_add_library(TARGET ZENetwork 
 	SOURCES ${Sources}
 	HEADERS ${Headers}
-	LIBS ZECore ZEGraphics ZEInput ZEMeta ZEPhysics ZESound ZEUI ZEGame ZEInterior ZEModel ZEParticle ZEAI ZETerrain ZETexture ZEModules)
-
-ze_add_library(TARGET ZEEnginePlugin 
-	SOURCES ${Sources}
-	HEADERS ${Headers}
-	LIBS ZEFoundation ZECore ZEMeta)
-		
-ze_add_executable(TARGET ZE 
-	SOURCES ${Sources} ZEMain.cpp ZECore/ZEWindowResources.rc
-	LIBS ZEEngine
-	INSTALL)
-
-#ze_combine_libraries(ZEEngine LIBS ZEEngine ZEAI ZECore ZEGame ZEGraphics ZETexture ZEInput ZEMap ZEMeta ZEModel ZEParticle ZEPhysics ZESound ZEUI ZETerrain ZENetwork)
+	LIBS ZEFoundation)
