--- a/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
@@ -35,20 +35,28 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_source(ZEMain.cpp                        Sources)
-ze_add_source(ZEMetaCompilerOptions.cpp         Sources)
-ze_add_source(ZEMetaCompilerOptions.h           Sources)
-ze_add_source(ZEMetaData.cpp                    Sources)
-ze_add_source(ZEMetaData.h                      Sources)
-ze_add_source(ZEMetaGenerator.cpp               Sources)
-ze_add_source(ZEMetaGenerator.h                 Sources)
-ze_add_source(ZEMetaProcessor.cpp               Sources)
-ze_add_source(ZEMetaProcessor.h                 Sources)
-ze_add_source(ZEMetaProcessorInternal.cpp       Sources)
-ze_add_source(ZEMetaProcessorInternal.h         Sources)
-ze_add_source(ZEMetaProcessorClang.cpp          Sources)
-ze_add_source(ZEMetaCollectionGenerator.h    	Sources)
-ze_add_source(ZEMetaCollectionGenerator.cpp  	Sources)
+ze_add_source(ZEMCDriver.cpp Sources)
+ze_add_source(ZEMCDriver.h Sources)
+ze_add_source(ZEMCOptions.cpp Sources)
+ze_add_source(ZEMCOptions.h Sources)
+ze_add_source(ZEMCContext.cpp Sources)
+ze_add_source(ZEMCContext.h Sources)
+ze_add_source(ZEMCGenerator.cpp Sources)
+ze_add_source(ZEMCGenerator.h Sources)
+ze_add_source(ZEMCGeneratorEnumurator.cpp Sources)
+ze_add_source(ZEMCGeneratorClass.cpp Sources)
+ze_add_source(ZEMCGeneratorClassProperties.cpp Sources)
+ze_add_source(ZEMCGeneratorClassMethods.cpp Sources)
+ze_add_source(ZEMCGeneratorClassScripting.cpp Sources)
+ze_add_source(ZEMCParser.cpp Sources)
+ze_add_source(ZEMCParserAttribute.cpp Sources)
+ze_add_source(ZEMCParserType.cpp Sources)
+ze_add_source(ZEMCParserClass.cpp Sources)
+ze_add_source(ZEMCParserProperty.cpp Sources)
+ze_add_source(ZEMCParserMethod.cpp Sources)
+ze_add_source(ZEMCParser.h Sources)
+ze_add_source(ZEMCRegisterer.h Sources)
+ze_add_source(ZEMCRegisterer.cpp Sources)
 
 ze_add_executable(TARGET ZEMetaCompiler 
 	CONSOLE 
