FIX: Minor and major bug fixes on ZEMetaCompiler. IMP: Dynamic memory leaks and management problems has been fixed in ZEMetaCompiler by using non-pointer members and ZEPointer(s). IMP: New facilities and features has been added to ZEMeta. IMP: ZEMetaCompiler Registration module has been improved. ADD: Enumerator support added to ZEMetaCompiler and ZEMeta sub-system. ADD: ZECharacter operators methods has been added to ZEString. CHG: ZEString allocator changed from ZEBaseAllocator to ZESmartAllocator.
svn path=/branches/v0.6.1-NewMeta/; revision=1549

--- a/Source/ZEEngine/ZEMeta/CMakeLists.txt
+++ b/Source/ZEEngine/ZEMeta/CMakeLists.txt
@@ -74,9 +74,10 @@ ze_add_source(ZEMetaModuleRegister.h			Sources Headers)
 ze_add_source(ZEPrimitiveTypes.h				Sources)
 ze_add_source(ZEPrimitiveTypes.cpp				Sources)
 
-#ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEVector.h     ZEMC)
-#ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEMatrix.h     ZEMC)
-#ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEQuaternion.h ZEMC)
+ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEDS/ZEString.h     	ZEMC)
+ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEVector.h     ZEMC)
+ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEMatrix.h     ZEMC)
+ze_add_source(${CMAKE_SOURCE_DIR}/Source/ZEFoundation/ZEMath/ZEQuaternion.h ZEMC)
 
 ze_add_library(TARGET ZEMeta 
 	SOURCES ${Sources}
