ADD: ZEModelAnimationClip, ZEModelAnimationGraph, ZEModelAnimationNodeAdd, ZEModelAnimationNodeMap classes are added to Animation Sub-system. NOTE: Though the whole system is unfinished right now, especially parts concerning node transitions and ZEModel connection, a commit is made for saving progress.
svn path=/branches/v0.6.1-NewAnimation/; revision=1550

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -57,14 +57,23 @@ ze_add_source(ZEModelHelper.cpp					Sources)
 ze_add_source(ZEModelHelper.h					Sources Headers)
 ze_add_source(ZEModelDebugDrawer.cpp			Sources)
 ze_add_source(ZEModelDebugDrawer.h				Sources Headers)
+ze_add_source(ZEModelAnimationNode.cpp			Sources)
+ze_add_source(ZEModelAnimationNode.h			Sources Headers)
+ze_add_source(ZEModelAnimationGraph.cpp			Sources)
+ze_add_source(ZEModelAnimationGraph.h			Sources Headers)
+ze_add_source(ZEModelAnimationClip.cpp			Sources)
+ze_add_source(ZEModelAnimationClip.h			Sources Headers)
+ze_add_source(ZEModelAnimationNodeMap.cpp		Sources)
+ze_add_source(ZEModelAnimationNodeMap.h			Sources Headers)
 ze_add_source(ZEModelAnimationNodeBlend.cpp		Sources)
 ze_add_source(ZEModelAnimationNodeBlend.h		Sources Headers)
+ze_add_source(ZEModelAnimationNodeAdd.cpp		Sources)
+ze_add_source(ZEModelAnimationNodeAdd.h			Sources Headers)
 ze_add_source(ZEModelAnimationNodeClip.cpp		Sources)
 ze_add_source(ZEModelAnimationNodeClip.h		Sources Headers)
 ze_add_source(ZEModelAnimationController.cpp	Sources)
 ze_add_source(ZEModelAnimationController.h		Sources Headers)
-ze_add_source(ZEModelAnimationNode.cpp			Sources)
-ze_add_source(ZEModelAnimationNode.h			Sources Headers)
+
 
 
 
