FIX: Debug release library problems have been fixed.
svn path=/trunk/; revision=1561

--- a/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
+++ b/Source/ZETools/ZEToolComponents/ZEResourceConfigurationWidget/CMakeLists.txt
@@ -50,7 +50,7 @@ qt4_add_resources(QtResourceFiles ${QtResources})
 qt4_wrap_ui(QtUIFiles ${QtUI})
 qt4_wrap_cpp(QtMocFiles ${QtMocs})
 
-include_directories(${CMAKE_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 ze_add_library(TARGET ZEResourceConfigurationWidget 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
