--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -57,6 +57,8 @@ ze_add_source(ZEGrid.cpp				Sources)
 ze_add_source(ZEGrid.h					Sources	Headers ZEPP)
 ze_add_source(ZEGizmo.cpp	    		Sources)
 ze_add_source(ZEGizmo.h					Sources	Headers)
+ze_add_source(ZELensFlare.cpp	    	Sources)
+ze_add_source(ZELensFlare.h				Sources	Headers)
 ze_add_source(ZEMoon.cpp	    		Sources)
 ze_add_source(ZEMoon.h					Sources	Headers)
 ze_add_source(ZEOrbit.cpp				Sources)
