--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -38,33 +38,28 @@ MusicVolume = 100
 VideoVolume = 100
 PlayerCommVolume = 100
 
-[RWSim]
+[CustT]
 IGIP = 127.0.0.1
-HeliDynIP = 127.0.0.1
-IGSimulationDataPort = 27300
-HeliDynHATPort = 27100
-CustBControlPacketReceivePort = 10000
-CustBStatusIP = 127.0.0.1
-CustBStatusSendPort = 10001
-CustBHeartBeatIP = 127.0.0.1
-CustBHeartbeatSendPort = 10002
-CustBEntityInfoIP = 127.0.0.1
-CustBEntityInfoSendPort = 10003
-CameraFOVValue = 90.000000
-CameraOffsetX = 0.000000
-CameraOffsetY = 0.000000
-CameraOffsetZ = 0.000000
+ResponseIP = 127.0.0.1
+ReceiverPort = 27100
+SenderPort = 27200
+SimulationPort = 27300
+AcknowledgeByte = false
+GimbalMaxAzimuthRate = 360.000000
+GimbalMaxElevationRate = 360.000000
+GimbalDefaultAzimuthRate = 15.000000
+GimbalDefaultElevationRate = 15.000000
+CameraEOIndex = 2
+CameraIRIndex = 18
+CameraEOMaxFOV = 60.000000
+CameraEOMinFOV = 5.000000
+CameraIRMaxFOV = 60.000000
+CameraIRMinFOV = 5.000000
+CameraEOMaxZoomRate = 360.000000
+CameraIRMaxZoomRate = 360.000000
+CameraEODefaultZoomRate = 5.000000
+CameraIRDefaultZoomRate = 5.000000
 SceneTimeOfDay = 1.000000
 SceneSunlightIntensity = 3.000000
 SceneAmbientFactor = 0.300000
-SceneWeatherEnabled = true
-LeftViewWidth = 1920
-LeftViewHeight = 1080
-LeftHorizontalFOV = 40.000000
-CenterViewWidth = 1920
-CenterViewHeight = 1080
-CenterHorizontalFOV = 40.000000
-RightViewWidth = 1920
-RightViewHeight = 1080
-RightHorizontalFOV = 40.000000
 
