FIX: Many improvements and fixed have been made on ZEFile, ZEPathInfo and ZEPathManager. FIX: Many new path system resource problems has been fixed.
svn path=/branches/v0.6.1-NewMeta/; revision=1575

--- a/Source/ZEFoundation/ZEML/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEML/CMakeLists.txt
@@ -53,6 +53,8 @@ ze_add_source(ZEMLSerialWriterTests.cpp 	Tests)
 ze_add_source(ZEMLSerialReader.h 			Sources Headers)
 ze_add_source(ZEMLSerialReader.cpp 			Sources)
 ze_add_source(ZEMLSerialReaderTests.cpp 	Tests)
+ze_add_source(ZEMLReader.h					Sources Headers)
+ze_add_source(ZEMLReader.cpp				Sources)
 
 ze_add_library(TARGET ZEML 
 	SOURCES ${Sources} 
