FIX: Many bugs have been fixed on ZEDirectoryInfo and ZEPathInfo. IMP: ZESceneConverter has been improved.
svn path=/branches/v0.6.1-NewMeta/; revision=1584

--- a/Source/ZETools/ZESceneConverter/CMakeLists.txt
+++ b/Source/ZETools/ZESceneConverter/CMakeLists.txt
@@ -36,6 +36,8 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZESceneConverter.cpp		Sources)
+ze_add_source(ZESceneConverter.h		Sources Headers)
+ze_add_source(ZEMain.cpp				Sources)
 
 ze_add_executable(TARGET ZESceneConverter
 	CONSOLE
