--- a/Source/ZEFoundation/ZEML/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEML/CMakeLists.txt
@@ -37,6 +37,8 @@ cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEMLCommon.h					Sources Headers)
 ze_add_source(ZEMLCommon.cpp				Sources)
+ze_add_source(ZEMLRoot.h					Sources Headers)
+ze_add_source(ZEMLRoot.cpp					Sources)
 ze_add_source(ZEMLItem.h 					Sources Headers)
 ze_add_source(ZEMLItem.cpp 					Sources)
 ze_add_source(ZEMLItemTests.cpp 			Tests)
@@ -49,6 +51,7 @@ ze_add_source(ZEMLPropertyTests.cpp 		Tests)
 ze_add_source(ZEMLDataProperty.h 			Sources Headers)
 ze_add_source(ZEMLDataProperty.cpp 			Sources)
 ze_add_source(ZEMLDataPropertyTests.cpp 	Tests)
+
 ze_add_source(ZEMLSerialReader.h 			Sources Headers)
 ze_add_source(ZEMLSerialReader.cpp 			Sources)
 ze_add_source(ZEMLSerialReaderTests.cpp 	Tests)
