RNM: ZEMLDataProperty, ZEMLItem classes have been renamed as ZEMLData and ZEMLElement and changes on other various files have been made respectively.
svn path=/branches/v0.6.1-NewMeta/; revision=1598

--- a/Source/ZEFoundation/ZEML/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEML/CMakeLists.txt
@@ -39,19 +39,18 @@ ze_add_source(ZEMLCommon.h					Sources Headers)
 ze_add_source(ZEMLCommon.cpp				Sources)
 ze_add_source(ZEMLRoot.h					Sources Headers)
 ze_add_source(ZEMLRoot.cpp					Sources)
-ze_add_source(ZEMLItem.h 					Sources Headers)
-ze_add_source(ZEMLItem.cpp 					Sources)
-ze_add_source(ZEMLItemTests.cpp 			Tests)
+ze_add_source(ZEMLElement.h 				Sources Headers)
+ze_add_source(ZEMLElement.cpp 				Sources)
+ze_add_source(ZEMLElementTests.cpp 			Tests)
 ze_add_source(ZEMLNode.h 					Sources Headers)
 ze_add_source(ZEMLNode.cpp 					Sources)
 ze_add_source(ZEMLNodeTests.cpp 			Tests)
 ze_add_source(ZEMLProperty.h 				Sources Headers)
 ze_add_source(ZEMLProperty.cpp 				Sources)
 ze_add_source(ZEMLPropertyTests.cpp 		Tests)
-ze_add_source(ZEMLDataProperty.h 			Sources Headers)
-ze_add_source(ZEMLDataProperty.cpp 			Sources)
-ze_add_source(ZEMLDataPropertyTests.cpp 	Tests)
-
+ze_add_source(ZEMLData.h 					Sources Headers)
+ze_add_source(ZEMLData.cpp 					Sources)
+ze_add_source(ZEMLDataTests.cpp 			Tests)
 ze_add_source(ZEMLSerialReader.h 			Sources Headers)
 ze_add_source(ZEMLSerialReader.cpp 			Sources)
 ze_add_source(ZEMLSerialReaderTests.cpp 	Tests)
